# Solr-Search-ETL

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc  LICENSE  atlas_bookstack.py  atlas_collections.py  atlas_groups.py  atlas_initiatives.py  atlas_lookups.py  atlas_reports.py  atlas_terms.py  atlas_users.py  delete.py  functions.py  gl-sast-report.json  gl-semgrep-sast-mergebot-report.json  package-lock.json  package.json  pyproject.toml  readme.md  renovate.json  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml  update.yml
