[tool.poetry]
name = "atlas-etl-solr"
version = "1.1.0"
description = "Atlas BI Library Search ETL"
authors = ["Christopher Pickering <cpickering@rhc.net>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
pyodbc = "^4.0.32"
pysolr = "^3.9.0"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
