[tool.poetry]
name = "atlas-etl-solr"
version = "1.4.0"
description = "Atlas BI Library Search ETL"
authors = ["Christopher Pickering <cpickering@rhc.net>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8.2"
pyodbc = "^4.0.32"
pysolr = "^3.9.0"
pytz = "^2022.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
tox = "^4.0.0"
pylint = "^2.15.0"
isort = "^5.10.1"
black = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max_line_length = 99
exclude = '''
    /(
        \.git
      | \.tox
      | \.venv

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
      | node_modules
    )/
    '''

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0103"
